--- a/index.html
+++ b/index.html
@@ -4,13 +4,84 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Сommunion with the spirit of the evening</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+  <header class="header">
+    <div class="container">
+      <div class="header_menu">
+        <img src="img/mens.png" alt="logo" class="header_logo">
+        <ul class="header_menu_list">
+          <li class="menu_text"><a href="#hero" class="menu_link">Главное</a></li>
+          <li class="menu_text"><a href="#about" class="menu_link">О празднике</a></li>
+          <li class="menu_text"><a href="#reviews" class="menu_link">Отзывы</a></li>
+          <li class="menu_text"><a href="#feedback" class="menu_link">Обратная связь</a></li>
+        </ul>
+      </div>
+    </div>
+  </header>
 
-    <script src="./Js/jquery.js"></script>
-    <script src="./Js/main.js"></script>
+  <main class="main">
+    <section class="hero" id="hero">
+      <div class="container">
+        <div class="hero_block">
+          <div class="hero_text_block">
+            <p class="hero_text">14 ноября</p>
+          </div>
+          <div class="hero_text_block">
+            <h1 class="hero_text">Общения с духами</h1>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about_reviews">
+      <div class="container">
+        <div class="about_reviews_block" id="about">
+          <div class="about_block">
+            <img src="img/43172-1000x830.png" alt="" class="about_img">
+            <div class="about_text_block">
+              <p class="about_title">14 ноября День общения с духом вечера</p>
+              <p class="about_text">Вечер самая мистическая часть суток. Вечером приходит усталость от дневных дел, забот и наступает время расслабления и отдыха. Не всегда конечно мы умеем правильно проводить вечера и виноваты в этом сами. Нужно уметь дистанцироваться от печалей, разочарований. Сбрасывать груз пережитого за день. И готовится мысленно к следующему дню. Задавать себе программу на следующее утро. Уметь радостно и легко переходить к приятным мыслям...Это способствует хорошему началу дня. Ведь с какими мыслями ложишься в постель,с такими и проснешься</p>
+            </div>
+          </div>
+          <div class="reviews_block" id="reviews">
+              <div class="reviews_box">
+                <p class="reviews_title">Елена Калина 14.11.2021 в 12:45</p>
+                <p class="reviews_text">Праздник потрясающий! Я не заметила, как пролетело время, а на минуточку это было два с половиной часа! все было очень мило, очень по-домашнему и очень душевно! Очень интересно, очень впечатляюще, очень насыщенно!
+                </p>
+              </div>
+              <div class="reviews_box">
+                <p class="reviews_title">Елена Калина 14.11.2021 в 12:45</p>
+                <p class="reviews_text">Праздник потрясающий! Я не заметила, как пролетело время, а на минуточку это было два с половиной часа! все было очень мило, очень по-домашнему и очень душевно! Очень интересно, очень впечатляюще, очень насыщенно!
+                </p>
+              </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="feedback" id="feedback">
+      <div class="container">
+        <form action="" class="feedback_form">
+          <input type="text" placeholder="Имя" name="user_name">
+          <textarea name="ask" placeholder="Вопрос"></textarea>
+          <button class="feedback_button">Отправить</button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <p class="footer_text">спасибо что посетили мой сайт </p>
+    </div>
+  </footer>
+
+  <script src="./Js/main.js"></script>
+  <script src="./Js/jquery.js"></script>
 </body>
 </html>
