--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/tablet.css">
+    <link rel="stylesheet" href="./css/phone.css">
 </head>
 <body>
   <header class="header">
@@ -23,6 +24,11 @@
           <li class="menu_text"><a href="#reviews" class="menu_link">Отзывы</a></li>
           <li class="menu_text"><a href="#feedback" class="menu_link">Обратная связь</a></li>
         </ul>
+        <button class="burger_menu">
+          <div class="burger_line"></div>
+          <div class="burger_line"></div>
+          <div class="burger_line"></div>
+        </button>
       </div>
     </div>
   </header>
@@ -82,7 +88,7 @@
     </div>
   </footer>
 
-  <script src="./Js/main.js"></script>
   <script src="./Js/jquery.js"></script>
+  <script src="./Js/main.js"></script>
 </body>
 </html>
